--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '<enter your client id here>',
+        'client_id': '62cb6d87-7f45-4ce0-bd79-3c7eca65ced4',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
